# nexus

./: CMakeLists.txt  README.md
inc/: Body.h  Bound.h  CMakeLists.txt  Node.h  Vec2f.h
src/: Body.cpp  Bound.cpp  CMakeLists.txt  Node.cpp  Vec2f.cpp  main.cpp
test/: CMakeLists.txt  vec2f_checks.cpp
